# 42hello-triangle

01_dev_env/: 01_dev_env.md  CMakeLists.txt
02_window/: 02_window.md  CMakeLists.txt
02_window/source/: main.cpp
03_triangle/: 03_triangle.md  CMakeLists.txt
03_triangle/glad/src/: glad.c
03_triangle/source/: basic.vert  main.cpp
04_uniform/: 04_uniform.md
04_uniform/glad/include/glad/: glad.h
04_uniform/source/: basic.frag  basic.vert  main.cpp
05_texture/: 05_texture.md  CMakeLists.txt
05_texture/source/: basic.frag  basic.vert  main.cpp
06_load_model/: 06_load_model.md  CMakeLists.txt
06_load_model/include/: assimp_loader.h  camera.h  file_loader.h  glfw_util.h  material.h  mesh.h  model.h  move.h  shader.h  texture.h  vertex_buffer.h
06_load_model/source/: assimp_loader.cpp  basic.frag  basic.vert  camera.cpp  file_loader.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  move.cpp  shader.cpp  texture.cpp  vertex_buffer.cpp
